# viewpoint-scraper

./: README.md  pyproject.toml
.github/workflows/: scrape_properties.yaml
data/for_sale/: properties_2025-05-07.csv  properties_2025-05-09.csv  properties_2025-05-10.csv  properties_2025-05-11.csv  properties_2025-05-12.csv  properties_2025-05-14.csv  properties_2025-05-15.csv  properties_2025-05-16.csv  properties_2025-05-17.csv  properties_2025-05-19.csv  properties_2025-05-20.csv  properties_2025-05-21.csv  properties_2025-05-22.csv  properties_2025-05-23.csv  properties_2025-05-24.csv  properties_2025-05-25.csv  properties_2025-05-26.csv  properties_2025-05-27.csv  properties_2025-05-28.csv  properties_2025-05-29.csv  properties_2025-05-30.csv  properties_2025-06-01.csv  properties_2025-06-02.csv  properties_2025-06-03.csv  properties_2025-06-04.csv  properties_2025-06-05.csv  properties_2025-06-06.csv  properties_2025-06-08.csv  properties_2025-06-09.csv  properties_2025-06-10.csv  properties_2025-06-11.csv  properties_2025-06-12.csv  properties_2025-06-13.csv  properties_2025-06-14.csv  properties_2025-06-15.csv  properties_2025-06-16.csv  properties_2025-06-17.csv  properties_2025-06-18.csv  properties_2025-06-19.csv  properties_2025-06-20.csv  (+348 more)
data/sold_expired/: properties_2025-05-08.csv  properties_2025-05-09.csv
viewpoint_scraper/: scrape_for_sale.py  scrape_photos.py  scrape_sold_expired.py  scrape_viewpoint.py  viewpoint_scraper.py
