[tool.poetry]
name = "viewpoint-scraper"
version = "0.1.0"
description = "Scraper for viewpoint.ca"
authors = ["taylordunn <t.dunn19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.13.4"
requests = "^2.32.3"
ipython = "^9.2.0"
selenium = "^4.32.0"
dotenv = "^0.9.9"
ipykernel = "^6.29.5"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
